--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 
 @use 'partials/based';
-@use 'partials/variables';
+// @use 'partials/variables';
+@use 'partials/header';
 
 @use 'pages/welcome';
