--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,5 +2,9 @@
 @use 'partials/based';
 // @use 'partials/variables';
 @use 'partials/header';
+@use 'partials/productTile';
 
 @use 'pages/welcome';
+@use 'pages/listing';
+@use 'pages/productPage';
+@use 'pages/cart';
