--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -1,27 +1,37 @@
 @use '../partials/variables' as v;
 
-html, #app, body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: v.$bg_color;
-    font-family: 'mainFont';
-    font-size: v.$font-size;
+html,
+#app,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: v.$bg_color;
+  font-family: 'mainFont';
+  font-size: v.$font-size;
 }
+main {
+  min-height: calc(100vh - v.$header_height);
+  display: flex;
+  flex-direction: column;
+}
+
+
+
 a {
-    text-decoration: none;
-    color: v.$text_color;
+  text-decoration: none;
+  color: v.$text_color;
 }
 .cls_content {
-    position: relative;
-    object-fit: cover;
+  position: relative;
+  object-fit: cover;
 }
 .cls_content > .cls_box {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
