--- a/src/scss/partials/_productTile.scss
+++ b/src/scss/partials/_productTile.scss
@@ -3,7 +3,7 @@
     .product_tile {
         // border: 1px solid $header_color;
         background-color: $header_color;
-        max-width: clamp(25vw, 40vw, 40vw);
+        // max-width: clamp(25vw, 40vw, 40vw);
         @include shadow;
         .tile {
             display: flex;
@@ -35,12 +35,13 @@
                     .new_price {
                         color: $promo_color;
                         font-size: clamp(18px, 20px, 22px);
+                        & ~ .old_price {
+                            opacity: .5;
+                            text-decoration: line-through;
+                            font-size: clamp(14px, 16px, 18px);
+                        }
                     }
-                    .old_price {
-                        opacity: .5;
-                        text-decoration: line-through;
-                        font-size: clamp(14px, 16px, 18px);
-                    }
+                    
                 }
             }
         }
