--- a/src/scss/pages/_cart.scss
+++ b/src/scss/pages/_cart.scss
@@ -1,58 +1,96 @@
 @use '../partials/variables' as *;
 
 .cart_page {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+  height: calc(70vh - $header_height);
+  .orders {
     height: 100%;
-    overflow: hidden;
-    height: calc(70vh - $header_height);
-    .orders {
-        height: 100%;
-        overflow: scroll;
-        .single_order {
-            background-color: #ffffff79;
-            margin: 15px 0;
-            border-radius: 10px;
-            .tile {
-                display: flex;
-                .image {
-                    flex: 1 1 50%;
-                    img {
-                        width: 100%;
-                    }
-                }
-                .description {
-                    flex: 1 1 50%;
-                }
-            }
+    overflow: scroll;
+    .single_order {
+      background-color: #ffffff79;
+      margin: 15px 0;
+      border-radius: 10px;
+      .tile {
+        display: flex;
+        .image {
+          flex: 1 1 50%;
+          margin: auto;
+          display: flex;
+
+          picture {
+            margin: 0 auto;
+          }
         }
-    }
-    .summary {
-        position: fixed;
-        height: 30vh;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        // width: 100%;
-        background-color: $header_color;
-        border-radius: 10px;
-        padding: 0 $header_padding;
-        .row {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            .text {
-                font-size: $font-size;
-            }
-        }
-        .sum {
-            position: relative;
-            width: 100%;
+        .description {
+          flex: 1 1 50%;
+          .title {
+            text-align: center;
+            font-size: clamp(20px, 22px, 24px);
+          }
+          .price_container {
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            min-height: 50px;
+          }
         }
+      }
+      .counter {
+        display: flex;
+        justify-content: end;
+        input {
+            appearance: none;
+            border: none;
+            background-color: transparent;
+            &[type="button"] {
+                background-color: $details_color;
+                max-width: 30px;
+                width: 100%;
+                &:first-child {
+                    border-radius: 5px 0 0 5px;
+                }
+                &:last-child {
+                    border-radius: 0 5px 5px 0;
+                }
+            }
+            &[type="number"] {
+                background-color: #fff;
+                max-width: 30px;
+                width: 100%;
+                text-align: center;
+            }
+        }
+      }
     }
-    @include btn;
+  }
+  .summary {
+    position: fixed;
+    height: 30vh;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    // width: 100%;
+    background-color: $header_color;
+    border-radius: 10px;
+    padding: 0 $header_padding;
+    .row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .text {
+        font-size: $font-size;
+      }
+    }
+    .sum {
+      position: relative;
+      width: 100%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      min-height: 50px;
+    }
+  }
+  @include btn;
 }
