--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -22,16 +22,40 @@ a {
   text-decoration: none;
   color: v.$text_color;
 }
-.cls_content {
-  position: relative;
-  object-fit: cover;
+
+.new_price {
+  color: v.$promo_color;
+  font-size: clamp(18px, 20px, 22px);
+  & ~ .old_price {
+      opacity: .5;
+      text-decoration: line-through;
+      font-size: clamp(14px, 16px, 18px);
+  }
 }
-.cls_content > .cls_box {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
+.old_price {
+  font-size: clamp(18px, 20px, 22px);
+
 }
+
+.single_order {
+  .details {
+    display: none;
+  }
+}
+
+
+
+
+// .cls_content {
+//   position: relative;
+//   object-fit: cover;
+// }
+// .cls_content > .cls_box {
+//   position: absolute;
+//   top: 0;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+//   width: 100%;
+//   height: 100%;
+// }
